--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
    "background": {
       "service_worker": "background.js"
    },
-   "description": "pin any web in side panel",
+   "description": "在侧边栏打开web页面",
    "host_permissions": [ "\u003Call_urls>" ],
    "icons": {
       "128": "icon.png",
@@ -13,7 +13,6 @@
       "32": "icon.png",
       "48": "icon.png"
    },
-   "key": "a2NqaWE=",
    "manifest_version": 3,
    "name": "WebSide",
    "permissions": [ "sidePanel", "declarativeNetRequest" ],
